--- a/index.html
+++ b/index.html
@@ -26,19 +26,16 @@
         <div class="produtos">
         </div>
 
-        <div class="formContainer">
-            <h2 class="textForm">
+        <div class="revendedor">
+            <h2>
                 Seja um revendedor dos produtos mais Top da Galáxia
             </h2>
-            <form>
-                <input id="name" name="name" type="text" placeholder="Nome">
-                <input id="email" name="email" type="email" placeholder="Email">
-                <input id="tel" name="tel" type="tel" placeholder="Telefone">
-                
-                <input id="submit" type="submit" value="INSCREVA-SE">
-            </form>		
+            <div>                
+                <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5517981148661&text=Tenho interesse em ser revendedor dos produtos Aí Sim" class="button" target="_blank">
+                <img class="iconWhats" src="./images/whatsapp.svg" alt="Whatsapp"> Entrar em contato
+                </a>
+            </div>		
         </div>
-        
 
         <footer>
             <h2>Acompanhe-nos nas redes sociais:</h2>
