Modified color and translate button

--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
 <body>
     <div class="container">
         <img id="logoAiSim" src="./images/logoAiSim.png" alt="Ai sim produtos automotivos">
-        <div class="description">
-            <img id="produtosAiSim" src="./images/produtos2.png" alt="Produtos Aí Sim">
-            <h2 class="textProduct">
-                Produtos automotivo para cuidar
-                do seu carro com praticidade e deixá-lo
-                com o máximo de brilho e elegância.
-            </h2>
-        </div>
+        <main>
+            <div class="description">
+                <img id="produtosAiSim" src="./images/produtos2.png" alt="Produtos Aí Sim">
+                <h2 class="textProduct">
+                    Produtos automotivo para cuidar
+                    do seu carro com praticidade e deixá-lo
+                    com o máximo de brilho e elegância.
+                </h2>
+            </div>
 
-        <div class="produtos">
-        </div>
+            <div class="produtos">
+            </div>
 
-        <div class="revendedor">
-            <h2>
-                Seja um revendedor dos produtos mais Top da Galáxia
-            </h2>
-            <div>                
-                <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5517981148661&text=Tenho interesse em ser revendedor dos produtos Aí Sim" class="button" target="_blank">
-                <img class="iconWhats" src="./images/whatsapp.svg" alt="Whatsapp"> Entrar em contato
-                </a>
-            </div>		
-        </div>
-
+            <div class="revendedor">
+                <h2>
+                    Seja um revendedor dos produtos mais Top da Galáxia
+                </h2>
+                <div>                
+                    <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5517981148661&text=Tenho interesse em ser revendedor dos produtos Aí Sim" class="button" target="_blank">
+                    <img class="iconWhats" src="./images/whatsapp.svg" alt="Whatsapp"> Entrar em contato
+                    </a>
+                </div>		
+            </div>
+        </main>
+        
         <footer>
             <h2>Acompanhe-nos nas redes sociais:</h2>
             <ul class="contactList">
