transform in responsive

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="container">
-        <img id="logoAiSim" src="./images/logoAiSim.png" alt="Ai sim produtos automotivos">
+        <img id="logoAiSim" src="./images/logoAiSim.png" alt="Logo Aí sim">
         <main>
             <div class="description">
-                <img id="produtosAiSim" src="./images/produtos2.png" alt="Produtos Aí Sim">
+                <img id="produtosAiSim" src="./images/produtos2.png" alt="Produtos automotivo Aí Sim">
                 <h2 class="textProduct">
                     Produtos automotivo para cuidar
                     do seu carro com praticidade e deixá-lo
