--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </a>
                 </li>
                 <li class="itemList">
-                    <a href="https://instagram.com/oficial.aisim">
-                        <img class="icone insta" src="./images/instaIcon.png" alt="Icone Instagram">oficial.aisim
+                    <a href="https://instagram.com/aisimoficial">
+                        <img class="icone insta" src="./images/instaIcon.png" alt="Icone Instagram">aisimoficial
                     </a>
                 </li>
                 <li class="itemList">
