--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </h2>
                 <div>                
                     <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5517981148661&text=Tenho interesse em ser revendedor dos produtos Aí Sim" class="button" target="_blank">
-                    <img class="iconWhats" src="./images/whatsapp.svg" alt="Whatsapp"> Entrar em contato
+                    <img class="iconWhats" src="./images/whatsImg.png" alt="Mensagem para contato"> Entrar em contato
                     </a>
                 </div>		
             </div>
@@ -59,5 +59,6 @@
         </footer>
     </div>
     
+    <script> </script>
 </body>
 </html>
